# VisualSea

./: .gitignore  README.md  install.bat  install.sh  main.py  pyproject.toml  render.yaml  requirements.txt  run.py  setup.py
src/seaborn_canvas/: __init__.py  cli.py  main.py
src/seaborn_canvas/static/js/: app.js
src/seaborn_canvas/templates/: index.html
templates/: index.html
