[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "seaborn-canvas"
version = "0.1.0"
description = "A no-code data visualization tool using Seaborn"
authors = [{ name = "SeabornCanvas Team", email = "info@seaborncanvas.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["visualization", "seaborn", "no-code", "data-science"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "python-multipart==0.0.6",
  "seaborn==0.13.0",
  "pandas>=1.5.3",
  "matplotlib>=3.7.0",
  "numpy>=1.23.5",
  "jinja2==3.1.2",
  "openpyxl>=3.1.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/seaborn-canvas"
Documentation = "https://github.com/yourusername/seaborn-canvas#readme"
Repository = "https://github.com/yourusername/seaborn-canvas.git"

[project.scripts]
seaborn-canvas = "seaborn_canvas.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["seaborn_canvas"]

[tool.setuptools.package-data]
seaborn_canvas = ["templates/*", "static/**/*"]
